# todo-app

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
model/: Cargo.toml
model/src/: common.rs  util.rs
src/: app.rs  banner.rs  client.rs  lib.rs  main.rs  ui.rs
tests/: integration_test.rs  task_test.rs
tests/common/: mod.rs
