[package]
name = "todo-app"
description = "A simple CLI TODO app"
version = "0.1.2-alpha"
edition = "2021"
categories = ["utilities", "CLI"]
license = "MIT"
authors = ["Agustin Mediotti <agustinmediotti@gmail.com>"]

[workspace]
members = ["model"]

[dependencies]
model = { path = "./model" }

ratatui = "0.29.0"
crossterm = "0.28.1"
color-eyre = "0.6.3"
throbber-widgets-tui = "0.8.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
dirs = "6.0.0"

[[bin]]
name = "todo-app"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.19.1"
