[package]
name = "todo-app"
description = "A simple yet powerfull CLI TODO app written in Rust"
authors = ["Agustin Mediotti <agustinmediotti@gmail.com>"]
categories = ["utilities", "CLI"]
edition = "2021"
version = "0.1.4-alpha"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Agustin-Mediotti/todo-app/"

[workspace]
members = ["model"]

[dependencies]
model = { path = "./model" }

ratatui = "0.29.0"
crossterm = "0.29.0"
color-eyre = "0.6.3"
throbber-widgets-tui = "0.8.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
dirs = "6.0.0"

[[bin]]
name = "todo-app"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.19.1"
